--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 appdirs==1.4.4
 asgiref==3.3.1
+attrs==20.3.0
 distlib==0.3.1
 Django==3.1.5
 djangorestframework==3.12.2
 factory-boy==3.2.0
 Faker==5.6.5
 filelock==3.0.12
+hypothesis==6.0.3
 python-dateutil==2.8.1
 pytz==2020.5
 six==1.15.0
+sortedcontainers==2.3.0
 sqlparse==0.4.1
 text-unidecode==1.3
 virtualenv==20.0.31
