--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,35 @@
+amqp==5.0.5
+ansicon==1.89.0
 appdirs==1.4.4
+arrow==1.0.3
 asgiref==3.3.1
 attrs==20.3.0
+billiard==3.6.3.0
+blessed==1.18.0
+celery==5.0.5
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
 distlib==0.3.1
 Django==3.1.5
+django-extensions==3.1.1
+django-picklefield==3.0.1
 djangorestframework==3.12.2
 factory-boy==3.2.0
 Faker==5.6.5
 filelock==3.0.12
 hypothesis==6.0.3
+jinxed==1.0.1
+kombu==5.0.2
+prompt-toolkit==3.0.17
 python-dateutil==2.8.1
 pytz==2020.5
+redis==3.5.3
 six==1.15.0
 sortedcontainers==2.3.0
 sqlparse==0.4.1
 text-unidecode==1.3
+vine==5.0.0
 virtualenv==20.0.31
+wcwidth==0.2.5
