--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ distlib==0.3.1
 Django==3.1.5
 django-extensions==3.1.1
 django-picklefield==3.0.1
+django-rest-auth==0.9.5
 djangorestframework==3.12.2
 factory-boy==3.2.0
 Faker==5.6.5
@@ -22,6 +23,7 @@ filelock==3.0.12
 hypothesis==6.0.3
 jinxed==1.0.1
 kombu==5.0.2
+pika==1.2.0
 prompt-toolkit==3.0.17
 python-dateutil==2.8.1
 pytz==2020.5
