--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ attrs==20.3.0
 billiard==3.6.3.0
 blessed==1.18.0
 celery==5.0.5
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
@@ -21,17 +23,19 @@ factory-boy==3.2.0
 Faker==5.6.5
 filelock==3.0.12
 hypothesis==6.0.3
+idna==2.10
 jinxed==1.0.1
 kombu==5.0.2
-pika==1.2.0
 prompt-toolkit==3.0.17
 python-dateutil==2.8.1
 pytz==2020.5
 redis==3.5.3
+requests==2.25.1
 six==1.15.0
 sortedcontainers==2.3.0
 sqlparse==0.4.1
 text-unidecode==1.3
+urllib3==1.26.4
 vine==5.0.0
 virtualenv==20.0.31
 wcwidth==0.2.5
