--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ idna==2.10
 jinxed==1.0.1
 kombu==5.0.2
 prompt-toolkit==3.0.17
+psycopg2==2.8.6
 python-dateutil==2.8.1
 pytz==2020.5
 redis==3.5.3
